feat: add Knockout support

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,10 +4,14 @@
         <title>Autocomplete Demo</title>
     </head>
     <body>
+        <nav id="menu"></nav>
         <section>
-            <h1>CodeMirror</h1>
-            <div id="codeMirror"></div>
+            <h1>Autocomplete Demo</h1>
+            <p>
+                <i>@teamwork/autocomplete</i> supports multiple text editors and
+                UI frameworks. It also makes it very easy to add new ones. See
+                the subpages for some live demos.
+            </p>
         </section>
-        <div id="autocomplete"></div>
     </body>
 </html>
