build: add support for generated API docs

--- a/demo/CodeMirror-Knockout.html
+++ b/demo/CodeMirror-Knockout.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CodeMirror & Knockout - Autocomplete Demo</title>
+        <title>CodeMirror & Knockout Demo</title>
     </head>
     <body>
-        <nav id="menu"></nav>
-        <section>
-            <h1>CodeMirror & Knockout - Autocomplete Demo</h1>
+        <main>
+            <h1>CodeMirror & Knockout Demo</h1>
             <div id="editor"></div>
             <div id="autocomplete"></div>
-        </section>
+        </main>
     </body>
 </html>
