--- a/demo/common/menu.html
+++ b/demo/common/menu.html
@@ -4,10 +4,13 @@
             <a class="menu__list-item-text" href="./index.html">Home</a>
         </li>
         <li class="menu__list-item">
+            <a class="menu__list-item-text" href="./api/index.html">API</a>
+        </li>
+        <li class="menu__list-item">
             <a
                 class="menu__list-item-text"
                 href="https://github.com/Teamwork/autocomplete"
-                >GitHub</a
+                >Code</a
             >
         </li>
         <li class="menu__list-item">
