--- a/demo/index.html
+++ b/demo/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Autocomplete Demo</title>
+        <title>Autocomplete</title>
     </head>
     <body>
-        <nav id="menu"></nav>
-        <section>
-            <h1>Autocomplete Demo</h1>
+        <main>
+            <h1>Autocomplete</h1>
             <p>
-                <i>@teamwork/autocomplete</i> supports multiple text editors and
-                UI frameworks. It also makes it very easy to add new ones. See
-                the subpages for some live demos.
+                <i>@teamwork/autocomplete</i> is a text autocomplete module
+                designed to easily support virtually any text editor and UI
+                framework.
             </p>
-        </section>
+        </main>
     </body>
 </html>
