--- a/demo/common/menu.html
+++ b/demo/common/menu.html
@@ -28,6 +28,11 @@
                         >CodeMirror & Knockout</a
                     >
                 </li>
+                <li class="menu__list-item">
+                    <a class="menu__list-item-text" href="./Textarea-Vue.html"
+                        >Textarea & Vue</a
+                    >
+                </li>
             </ul>
         </li>
     </ul>
