chore: add input field demo

--- a/demo/common/menu.html
+++ b/demo/common/menu.html
@@ -33,6 +33,11 @@
                         >Textarea & Vue</a
                     >
                 </li>
+                <li class="menu__list-item">
+                    <a class="menu__list-item-text" href="./Input-Vue.html"
+                        >Input & Vue</a
+                    >
+                </li>
             </ul>
         </li>
     </ul>
