--- a/demo/common/menu.html
+++ b/demo/common/menu.html
@@ -4,18 +4,11 @@
             <a class="menu__list-item-text" href="./index.html">Home</a>
         </li>
         <li class="menu__list-item">
-            <a class="menu__list-item-text" href="./api/index.html">API</a>
-        </li>
-        <li class="menu__list-item">
-            <a
-                class="menu__list-item-text"
-                href="https://github.com/Teamwork/autocomplete"
-                >Code</a
-            >
-        </li>
-        <li class="menu__list-item">
             <span class="menu__list-item-text">Demo</span>
             <ul class="menu__list menu__list--level2">
+                <li class="menu__list-item">
+                    <a class="menu__list-item-text" href="./Task.html">Task</a>
+                </li>
                 <li class="menu__list-item">
                     <a class="menu__list-item-text" href="./CodeMirror-Vue.html"
                         >CodeMirror & Vue</a
@@ -39,6 +32,16 @@
                     >
                 </li>
             </ul>
+        </li>
+        <li class="menu__list-item">
+            <a class="menu__list-item-text" href="./api/index.html">API</a>
+        </li>
+        <li class="menu__list-item">
+            <a
+                class="menu__list-item-text"
+                href="https://github.com/Teamwork/autocomplete"
+                >Code</a
+            >
         </li>
     </ul>
 </nav>
