--- a/demo/common/menu.html
+++ b/demo/common/menu.html
@@ -22,6 +22,13 @@
                     >
                 </li>
                 <li class="menu__list-item">
+                    <a
+                        class="menu__list-item-text"
+                        href="./Contenteditable-Vue.html"
+                        >Contenteditable & Vue</a
+                    >
+                </li>
+                <li class="menu__list-item">
                     <a class="menu__list-item-text" href="./Textarea-Vue.html"
                         >Textarea & Vue</a
                     >
