chore: add textarea-knockout demo

--- a/demo/common/menu.html
+++ b/demo/common/menu.html
@@ -34,6 +34,13 @@
                     >
                 </li>
                 <li class="menu__list-item">
+                    <a
+                        class="menu__list-item-text"
+                        href="./Textarea-Knockout.html"
+                        >Textarea & Knockout</a
+                    >
+                </li>
+                <li class="menu__list-item">
                     <a class="menu__list-item-text" href="./Input-Vue.html"
                         >Input & Vue</a
                     >
